--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,220 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+    --background-color: #fefae0;
+    --main-color: #e9edc9;
+    --unsuccess-color: #f38181;
+    --success-color: #95e1d3;
+    --warning-color: #fce38a;
+    --text-color: #495464;
+}
+
+body {
+    font-family: "Poppins", sans-serif;
+    text-align: center;
+}
+
+body:before {
+    /* background-image: url(https://shorturl.at/krtv1); */
+    background-color: #92caff;
+    background-repeat: repeat;
+    background-size: cover;
+    content: "";
+    height: 100%;
+    left: 0;
+    opacity: 0.7;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: -1;
+}
+
+h2 {
+    font-size: 2rem;
+    padding: 20px;
+    background-color: var(--background-color);
+    text-transform: uppercase;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.212);
+}
+
+.addTask_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: var(--background-color);
+    margin: 20px auto;
+    width: 600px;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.212);
+}
+
+.addTask_container p {
+    text-align: left;
+}
+
+.addTask_container input {
+    padding: 10px;
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(0, 0, 0, 0.212);
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+@keyframes moveBackAndForth {
+    0%,
+    100% {
+    }
+
+    50% {
+        background-color: var(--unsuccess-color);
+        font-size: 0.7em;
+    }
+}
+
+.input_error {
+    animation: moveBackAndForth 2s ease-in-out;
+}
+
+.addTask_container button {
+    font-size: 16px;
+    font-weight: bold;
+    padding: 10px 20px;
+    border: 1px solid rgba(0, 0, 0, 0.212);
+    border-radius: 5px;
+    margin-top: 10px;
+    width: 100%;
+    background-color: var(--main-color);
+    color: var(--text-color);
+    cursor: pointer;
+}
+
+.addTask_container button:hover {
+    background-color: var(--success-color);
+}
+
+.selector {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px auto 10px;
+}
+
+.selector li {
+    background-color: var(--background-color);
+    list-style-type: none;
+    cursor: pointer;
+    padding: 5px 10px;
+    border: 1px solid rgba(0, 0, 0, 0.212);
+}
+
+.selector li:hover,
+.selector li.active {
+    background-color: var(--success-color);
+}
+
+h3 {
+    background-color: var(--background-color);
+    color: var(--text-color);
+    padding: 10px;
+    margin: auto;
+    width: 100px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.212);
+}
+
+.todoList_container {
+    width: 500px;
+    margin: auto;
+    padding: 20px;
+    background-color: #0000001f;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    overflow-y: scroll;
+    max-height: 350px;
+    scrollbar-width: thin;
+}
+
+.todoList_container li {
+    display: flex;
+    justify-content: space-between;
+    list-style-type: none;
+    padding: 10px 10px;
+    margin: 10px 0px;
+    background-color: var(--background-color);
+    border-radius: 5px;
+    text-align: left;
+
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.212);
+}
+
+.todoList_ul span {
+    cursor: pointer;
+}
+
+.done {
+    text-decoration: line-through;
+    color: #a5a5a5;
+}
+
+.doneLi {
+    background-color: var(--success-color);
+}
+
+.done_hovered:hover {
+    text-decoration: none;
+    color: #000000;
+}
+
+.hovered:hover {
+    text-decoration: line-through;
+    color: #a5a5a5;
+}
+
+.hoveredLi:hover {
+    background-color: #fefae0db;
+}
+
+.date {
+    font-size: 0.8em;
+    text-decoration: underline;
+    margin: 2px;
+}
+
+footer {
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.212);
+    position: absolute;
+    bottom: 0;
+    cursor: default;
+    width: 100%;
+}
+
+@media screen and (max-width: 768px) {
+    .addTask_container {
+        width: 25rem;
+    }
+
+    .todoList_container {
+        width: 400px;
+        height: 100%;
+    }
+}
+
+@media screen and (max-width: 431px) {
+    .addTask_container {
+        width: 300px;
+    }
+
+    .todoList_container {
+        width: 300px;
+        height: 100%;
+    }
 }
