--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@ h2 {
     text-align: left;
 }
 
-.addTask_container input {
+.addTask_container input[type="text"] {
     padding: 10px;
     width: 100%;
     height: 40px;
@@ -97,9 +97,15 @@ h2 {
 .addTask_container button:hover {
     background-color: var(--success-color);
 }
+
+.fieldset-wrapper {
+    display: flex;
+}
+
 fieldset {
     display: flex;
     margin: auto;
+
     /* border: none; */
 }
 
@@ -116,25 +122,27 @@ fieldset legend {
     padding: 0px 15px 0px 10px;
     color: var(--text-color);
 }
-.caption-text {
-    display: inline-block;
-}
 
 fieldset > div {
     display: flex;
-    margin: 0 5px;
+    margin: 0 5px 15px 5px;
     flex-direction: column;
-    /* background-color: #fff; */
 }
 
-legend div {
-    margin: 0;
-}
-
-.addTask_container fieldset div input {
+input[type="radio"] {
     width: 20px;
+    height: 20px;
     padding: 0;
     margin: 0;
+}
+
+input[type="date"] {
+    padding: 10px;
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(0, 0, 0, 0.212);
+    border-radius: 5px;
+    margin: 10px 5px 10px;
 }
 
 .selector {
@@ -202,6 +210,40 @@ h3 {
     color: #3c3c3c;
 }
 
+.done,
+.notDone {
+    position: relative;
+    display: inline-block;
+}
+
+/* Tooltip text */
+.done .tooltiptext,
+.notDone .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    font-size: 10px;
+    background-color: rgba(0, 0, 0, 0.503);
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+    transition: 0.3s;
+    opacity: 0;
+
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    z-index: 1;
+}
+
+.done:hover .tooltiptext,
+.notDone:hover .tooltiptext {
+    opacity: 1;
+    transition: 0.3s;
+    visibility: visible;
+}
+
+/* tooltip end */
+
 .doneLi {
     background-color: var(--success-color);
 }
@@ -214,6 +256,11 @@ h3 {
 .hovered:hover {
     text-decoration: line-through;
     color: #a5a5a5;
+}
+
+.textwrap {
+    width: 100%;
+    word-break: break-all;
 }
 
 .hoveredLi:hover {
@@ -256,6 +303,10 @@ footer {
         width: 300px;
         height: 100%;
     }
+
+    .fieldset-wrapper {
+        flex-direction: column;
+    }
 }
 
 .caption-container {
@@ -294,6 +345,7 @@ footer {
         transition: 0.3s;
         background-color: var(--background-color);
         position: absolute;
+        z-index: 1;
         left: 17px;
 
         &:hover {
